prevent image from groing off screen

--- a/TheatreCMS/Content/Site.css
+++ b/TheatreCMS/Content/Site.css
@@ -1939,11 +1939,11 @@ transition: 0.3s;
 }
 
 .photo-modal--content{
-    margin: auto;
+    margin: 3em auto;
     margin-top: 150px;
     display: block;
     /*width: 80%;*/
-    max-width: 70%;
+    max-width: 60%;
     animation-name: zoom;
     animation-duration: 0.6s;
 }
@@ -1954,14 +1954,15 @@ transition: 0.3s;
 }
 
 .photo-modal--close {
-    bottom: 15px;
-    margin: auto;
+    margin: 15px auto;
     color: #f1f1f1;
+    display: block;
     font-size: 40px;
     font-weight: bold;
+    line-height: 43px;
     transition: 0.3s;
     background-color: chocolate;
-    border-radius: 5px;
+    border-radius: 50px;
     height: 50px;
     width: 50px;
 }
